--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
         
 div {
     padding: 25px;
+    color: #777;
     text-align: center;
     background-color: #ebebeb;
     border: 10px;
